--- a/examples/pages/comp/grids/grids.wxml
+++ b/examples/pages/comp/grids/grids.wxml
@@ -41,6 +41,23 @@
           <vtu-grid label="清除" icon="iconfont icon-sousuo" icon-size="30px"></vtu-grid>
         </vtu-grids>
       </vtu-panel>
+      <vtu-panel custom-class="panel" content-class="content">
+        <vtu-cell slot="header" title="自定义图片" border ></vtu-cell>
+        <vtu-grids col="3" icon-color="red" >
+          <vtu-grid label="图片" img-src="https://activity.vtuzx.com/doc/vtuUI/weapp/avatar/1.png"></vtu-grid>
+          <vtu-grid label="图片" img-src="https://activity.vtuzx.com/doc/vtuUI/weapp/avatar/2.png"></vtu-grid>
+          <vtu-grid label="图片" img-src="https://activity.vtuzx.com/doc/vtuUI/weapp/avatar/3.png"></vtu-grid>
+        </vtu-grids>
+      </vtu-panel>
+      <vtu-panel custom-class="panel" content-class="content">
+        <vtu-cell slot="header" title="自定义图片大小" border ></vtu-cell>
+        <vtu-grids col="4" icon-color="red"  img-width="30px">
+          <vtu-grid label="图片" img-src="https://activity.vtuzx.com/doc/vtuUI/weapp/avatar/1.png"></vtu-grid>
+          <vtu-grid label="图片" img-src="https://activity.vtuzx.com/doc/vtuUI/weapp/avatar/2.png"></vtu-grid>
+          <vtu-grid label="图片" img-src="https://activity.vtuzx.com/doc/vtuUI/weapp/avatar/3.png"></vtu-grid>
+          <vtu-grid label="图片" img-src="https://activity.vtuzx.com/doc/vtuUI/weapp/avatar/4.png"></vtu-grid>
+        </vtu-grids>
+      </vtu-panel>
     </view>
   </view>
 </view>
