--- a/examples/pages/comp/grids/grids.wxml
+++ b/examples/pages/comp/grids/grids.wxml
@@ -43,7 +43,7 @@
       </vtu-panel>
       <vtu-panel custom-class="panel" content-class="content">
         <vtu-cell slot="header" title="自定义图片" border ></vtu-cell>
-        <vtu-grids col="3" icon-color="red" >
+        <vtu-grids col="3">
           <vtu-grid label="图片" img-src="https://activity.vtuzx.com/doc/vtuUI/weapp/avatar/1.png"></vtu-grid>
           <vtu-grid label="图片" img-src="https://activity.vtuzx.com/doc/vtuUI/weapp/avatar/2.png"></vtu-grid>
           <vtu-grid label="图片" img-src="https://activity.vtuzx.com/doc/vtuUI/weapp/avatar/3.png"></vtu-grid>
@@ -51,7 +51,7 @@
       </vtu-panel>
       <vtu-panel custom-class="panel" content-class="content">
         <vtu-cell slot="header" title="自定义图片大小" border ></vtu-cell>
-        <vtu-grids col="4" icon-color="red"  img-width="30px">
+        <vtu-grids col="4" img-width="30px">
           <vtu-grid label="图片" img-src="https://activity.vtuzx.com/doc/vtuUI/weapp/avatar/1.png"></vtu-grid>
           <vtu-grid label="图片" img-src="https://activity.vtuzx.com/doc/vtuUI/weapp/avatar/2.png"></vtu-grid>
           <vtu-grid label="图片" img-src="https://activity.vtuzx.com/doc/vtuUI/weapp/avatar/3.png"></vtu-grid>
