--- a/src/navbar/vtu-navbar.wxml
+++ b/src/navbar/vtu-navbar.wxml
@@ -1,9 +1,8 @@
 <view class="Vtu_NavBar {{fixed? 'is-fixed': ''}}" style="height:{{navBarHeight}}px;z-index: {{zIndex}};">
     <view class="navbar-class Vtu_NavBar_Body {{hidden?'is-hidden':''}}" animation="{{hiddenAnimation}}" style="background-color:{{bgColor}};color:{{fontColor}};height:{{navBarHeight}}px;z-index: {{zIndex}};">
         <view class="Vtu_NavBar_Body_Content" style="line-height: {{menuBtnHeight}}px;height: {{menuBtnHeight}}px;top:{{menuBtnTop}}px;">
-          <view class="VNBC_Title" wx:if="{{titleAlign=='center' && type == 'default' && !useBarSlot}}" style="color:{{fontColor}};text-align: {{titleAlign}}; width: {{windowWidth - menuBtnWidth*2}}px;"><i class="{{icon}}" wx:if="{{icon}}"></i>{{title}}</view>
+          <view class="VNBC_Title" wx:if="{{titleAlign=='center' && !useBarSlot}}" style="color:{{fontColor}};text-align: {{titleAlign}}; width: {{windowWidth - menuBtnWidth*2}}px;"><i class="{{icon}}" wx:if="{{icon}}"></i>{{title}}</view>
             <view class="VNBC_Body {{slotCenter?'is-center':''}}" style="width: {{menuBtnRight - menuBtnWidth}}px;">
-                <view class="VNBC_Body_NavBtn" wx:if="{{showNavBtn && !tab}}">
                     <view class="VNBC_Body_NavBtn_Home VNBC_Body_NavBtn_Home--{{homeStyle}} homebar-class" wx:if="{{goHome && pageHisCount > 1}}">
                         <view class="VNBC_Body_NavBtn_Home_Span" style="z-index: {{zIndex+2}};" bindtap="pageClose">
                             <i class="vtu-icon vtu-icon-left"></i>
@@ -22,7 +21,7 @@
                     <slot></slot>
                   </block>
                   <block wx:else>
-                    <block wx:if="{{type == 'default' && titleAlign=='left'}}">
+                    <block wx:if="{{titleAlign=='left'}}">
                       <view class="VNBC_Body_Center_Title {{showNavBtn?'':'is-home'}}" style="color:{{fontColor}};text-align: {{titleAlign}};"><i class="{{icon}}" wx:if="{{icon}}"></i>{{title}}</view>
                     </block>
                   </block>
