--- a/src/navbar/vtu-navbar.wxml
+++ b/src/navbar/vtu-navbar.wxml
@@ -3,6 +3,7 @@
         <view class="Vtu_NavBar_Body_Content" style="line-height: {{menuBtnHeight}}px;height: {{menuBtnHeight}}px;top:{{menuBtnTop}}px;">
           <view class="VNBC_Title" wx:if="{{titleAlign=='center' && !useBarSlot}}" style="color:{{fontColor}};text-align: {{titleAlign}}; width: {{windowWidth - menuBtnWidth*2}}px;"><i class="{{icon}}" wx:if="{{icon}}"></i>{{title}}</view>
             <view class="VNBC_Body {{slotCenter?'is-center':''}}" style="width: {{menuBtnRight - menuBtnWidth}}px;">
+                <view class="VNBC_Body_NavBtn" wx:if="{{showNavBtn}}">
                     <view class="VNBC_Body_NavBtn_Home VNBC_Body_NavBtn_Home--{{homeStyle}} homebar-class" wx:if="{{goHome && pageHisCount > 1}}">
                         <view class="VNBC_Body_NavBtn_Home_Span" style="z-index: {{zIndex+2}};" bindtap="pageClose">
                             <i class="vtu-icon vtu-icon-left"></i>
